--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,6 +7,7 @@
 
 .footer {
   /*min-height: 60vh;*/
+  margin-bottom: 15vh;
 }
 
 .footer_container{
@@ -43,7 +44,7 @@
     gap: 40px;
     flex-wrap: wrap;
     padding: 10px;
-    /*padding-bottom:50px;*/
+    padding-bottom:50px;
     font-size: 20px;
 }
 
